--- a/packages/fedi_app/pubspec.yaml
+++ b/packages/fedi_app/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
     sdk: flutter
 
   # locales & localization
-  intl: ^0.17.0
+  intl: '>=0.17.0'
 
   # enhanced reorderable list
   flutter_reorderable_list: 1.1.0
@@ -46,11 +46,7 @@ dependencies:
   url_launcher: 6.0.12
 
   # object serialization
-  hive:
-    git:
-      url: https://github.com/xal/hive
-      ref: xal/nested_type_registry_dev
-      path: hive
+  hive: ^2.2.3
   hive_flutter:
     git:
       url: https://github.com/xal/hive
@@ -58,7 +54,7 @@ dependencies:
       path: hive_flutter
 
   # render status body, description, notes and other texts which may have html tags
-  flutter_html: 2.1.5
+  flutter_html: ^3.0.0
 
   # minutes/hours picker
   # duration_picker: 1.0.1
@@ -90,7 +86,7 @@ dependencies:
   flutter_cache_manager: 3.1.2
   # reactive programming
   rxdart: 0.27.2
-  async: 2.8.1
+  async: '>=2.8.1'
   # text size to fit constraints
   auto_size_text: 3.0.0-nullsafety.0
 
@@ -148,7 +144,7 @@ dependencies:
   mime: 1.0.1
 
   # parse html to extract raw text from status content
-  html: 0.15.0
+  html: 0.15.5
 
   # better scroll controller for nested scroll
   nested_scroll_controller: 1.0.0
@@ -171,8 +167,8 @@ dependencies:
   overlay_support: 1.2.1
 
   # file picker for media attachment
-  file_picker: 4.1.6
-  file: 6.1.2
+  file_picker: '>=6.1.0'
+  file: '>=6.1.2'
 
   # unenscape account not field
   html_unescape: 2.0.0
@@ -187,7 +183,7 @@ dependencies:
   flutter_slidable: 0.6.0
 
   # disable wakelock for video player
-  wakelock: 0.5.6
+  wakelock_plus: ^1.0.0
 
   # ask for review inside app
   in_app_review: 2.0.3
@@ -196,7 +192,7 @@ dependencies:
   jiffy: 4.1.0
 
   # collections extensions
-  collection: 1.15.0
+  collection: '>=1.15.0'
 
   # customizable switch widget
   flutter_switch: 0.3.2
@@ -214,7 +210,7 @@ dependencies:
   flutter_config: 2.0.0
 
   # get build details for config
-  package_info_plus: 1.3.0
+  package_info_plus: '>=3.0.0'
 
   # rich notification with possible integration with FCM
   awesome_notifications: 0.0.6+9
@@ -226,34 +222,34 @@ dependencies:
   easy_dispose_provider: 1.1.0
 
   # work with path/url parts
-  path: 1.8.0
+  path: '>=1.8.0'
 
   # code generator: unions, strings, equals & hash, etc
   freezed_annotation: ^0.15.0
 
   fediverse_api:
-    path: ../../packages/fediverse_api
-#    git:
-#      url: https://github.com/Big-Fig/Fediverse.app.git
-#      path: packages/fediverse_api
+#    path: ../../packages/fediverse_api
+     git:
+       url: https://github.com/Ralf-Kraemer/Tusk.git
+       path: packages/fediverse_api
 
   pleroma_api:
-    path: ../../packages/pleroma_api
-#    git:
-#      url: https://github.com/Big-Fig/Fediverse.app.git
-#      path: packages/pleroma_api
+#    path: ../../packages/pleroma_api
+     git:
+       url: https://github.com/Ralf-Kraemer/Tusk.git
+       path: packages/pleroma_api
 
   mastodon_api:
-    path: ../../packages/mastodon_api
-#    git:
-#      url: https://github.com/Big-Fig/Fediverse.app.git
-#      path: packages/mastodon_api
+#    path: ../../packages/mastodon_api
+     git:
+       url: https://github.com/Ralf-Kraemer/Tusk.git
+       path: packages/mastodon_api
 
   unifedi_api:
-    path: ../../packages/unifedi_api
-#    git:
-#      url: https://github.com/Big-Fig/Fediverse.app.git
-#      path: packages/unifedi_api
+#    path: ../../packages/unifedi_api
+     git:
+       url: https://github.com/Ralf-Kraemer/Tusk.git
+       path: packages/unifedi_api
 
 dev_dependencies:
   integration_test:
@@ -265,22 +261,21 @@ dev_dependencies:
   test: any
 
   # easy mock for tests
-  mockito: 5.0.16
+  mockito: '>=4.0.0'
   # build tools runner
   # usage example
-  build_runner: 2.1.4
+  build_runner: ^2.2.0
   # build tool to generate json from & to methods
-  json_serializable: 6.0.1
+  json_serializable: ^6.9.4
   # sql orm generator
   moor_generator: 4.6.0
   # required by sqlparser. Otherwise strange errors -
-  sqlparser: ^0.18.0
+  sqlparser: ^0.20.0
 
   # object serialization generator
   hive_generator:
     git:
-      url: https://github.com/xal/hive
-      ref: xal/nested_type_registry_dev
+      url: https://github.com/Ralf-Kraemer/hive
       path: hive_generator
 
   # official linters
@@ -297,8 +292,7 @@ dev_dependencies:
   # also useful for golden tests
   screenshots:
     git:
-      url: https://github.com/xal/screenshots.git
-      ref: b855c90dd78a4e5db447d003dddb84021db9411c
+      url: https://github.com/Ralf-Kraemer/screenshots.git
 
   # code generator: unions, strings, equals & hash, etc
   freezed: ^0.15.0+1
