--- a/packages/mastodon_api/pubspec.yaml
+++ b/packages/mastodon_api/pubspec.yaml
@@ -24,11 +24,7 @@ dependencies:
   http: ^0.13.4
   logging: ^1.0.2
   path: ^1.8.0
-  hive:
-    git:
-      url: https://github.com/xal/hive
-      ref: xal/nested_type_registry_dev
-      path: hive
+  hive: 2.2.3
   json_annotation: ^4.3.0
   freezed_annotation: ^0.15.0
   collection: ^1.15.0
