--- a/packages/fedi_app/pubspec.yaml
+++ b/packages/fedi_app/pubspec.yaml
@@ -49,8 +49,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter:
     git:
-      url: https://github.com/xal/hive
-      ref: xal/nested_type_registry_dev
+      url: https://github.com/Ralf-Kraemer/hive
       path: hive_flutter
 
   # render status body, description, notes and other texts which may have html tags
@@ -67,7 +66,7 @@ dependencies:
   # media grid
   flutter_staggered_grid_view: 0.4.1
   # retrieve storage path to save files
-  path_provider: 2.0.5
+  path_provider: ^2.1.5
   # fetch gallery albums and items
   photo_manager: 1.3.9+1
   # detect file mime type for share
@@ -83,9 +82,9 @@ dependencies:
   # cache images locally
   cached_network_image: 3.1.0
   # cache manager for cached_network_image. Use to set up cache settings
-  flutter_cache_manager: 3.1.2
+  flutter_cache_manager: ^3.4.1
   # reactive programming
-  rxdart: 0.27.2
+  rxdart: ^0.28.0
   async: '>=2.8.1'
   # text size to fit constraints
   auto_size_text: 3.0.0-nullsafety.0
@@ -120,13 +119,13 @@ dependencies:
   # commandline script to pull database from emulator
   # adb exec-out run-as com.fediverse.app cat ./databases/jffdev@fedi.app.sqlite > database.sqlite
   # sqlite orm
-  moor: 4.6.1
+  drift: ^2.26.0
 
   # sqlite3_flutter_libs required for moor ffi
   sqlite3_flutter_libs: 0.5.1
 
   # database inspector for debugging. Use with Moor Inspector Intellij Idea Plugin
-  moor_inspector: 0.3.1
+  drift_local_storage_inspector: ^0.7.0
 
   # check internet connection state
   connectivity_plus: 2.0.2
@@ -268,9 +267,9 @@ dev_dependencies:
   # build tool to generate json from & to methods
   json_serializable: ^6.9.4
   # sql orm generator
-  moor_generator: 4.6.0
+  drift_dev: ^2.26.0
   # required by sqlparser. Otherwise strange errors -
-  sqlparser: ^0.20.0
+  sqlparser: ^0.41.0
 
   # object serialization generator
   hive_generator:
@@ -295,7 +294,7 @@ dev_dependencies:
       url: https://github.com/Ralf-Kraemer/screenshots.git
 
   # code generator: unions, strings, equals & hash, etc
-  freezed: ^0.15.0+1
+  freezed: ^2.2.0
 
 
 # For information on the generic Dart part of this file, see the
