Http version update

--- a/packages/fedi_app/pubspec.yaml
+++ b/packages/fedi_app/pubspec.yaml
@@ -134,7 +134,9 @@ dependencies:
   web_socket_channel: 2.1.0
 
   # save photo and video to gallery
-  gallery_saver: 2.3.2
+  gallery_saver: 
+    git:
+      url: https://github.com/Ralf-Kraemer/gallery_saver.git
 
   # share actions via native API
   share_plus: 3.0.4
