--- a/packages/fedi_app/pubspec.yaml
+++ b/packages/fedi_app/pubspec.yaml
@@ -287,7 +287,9 @@ dev_dependencies:
   all_lint_rules_community: ^0.0.4
 
   # additional linters
-  dart_code_metrics: ^5.7.0
+  dart_code_metrics:
+    git:
+      url: https://github.com/Ralf-Kraemer/dart-code-metrics.git
 
   # generate screenshots for stores during UI tests
   # also useful for golden tests
